@@ -25,16 +25,10 @@ Important Groups:
 	* String manipulation
 	      1 g_filename_from_utf8	[LIMITATION: UTF8 only today]
 	      1 g_ascii_strdown
-	      4 g_strdown
 	     10 g_strlcpy
 	      2 g_strdelimit
 	      1 g_strescape
 	
-	* Character encoding
-	      3 g_utf8_validate
-	      3 g_locale_to_utf8
-	      1 g_locale_from_utf8
-
 	* Miscelaneous
 	      3 g_spaced_primes_closest
 	      2 g_printerr
@@ -56,7 +50,6 @@ Macros:
 
 * Unimplemented, not supported currently:
 
-	      3 g_convert   	 	(used for MONO_EXTERNAL_ENCODINGS)
 		g_unichar_tolower	Used for deprecated unmanaged string collation
 		g_unichar_type		Used for deprecated unmanaged string collation
 
